sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: not found: type i
      if(a[i] < a[iMin]){
           ^AlgInsertionSort:12: error: variable a of type Int does not take type parameters.
      if(a[i] < a[iMin]){
          ^AlgInsertionSort:12: error: not found: type iMin
      if(a[i] < a[iMin]){
                  ^AlgInsertionSort:12: error: variable a of type Int does not take type parameters.
      if(a[i] < a[iMin]){
                 ^AlgInsertionSort:17: error: not found: type j
      echange(a[j],a[Min])
                ^AlgInsertionSort:17: error: variable a of type Int does not take type parameters.
      echange(a[j],a[Min])
               ^AlgInsertionSort:17: error: not found: type Min
      echange(a[j],a[Min])
                     ^AlgInsertionSort:17: error: variable a of type Int does not take type parameters.
      echange(a[j],a[Min])
                    ^